src/test/custom/invalid/import/duplicateFunc.hwacc

int f() is 
  return 0
end
